# supply-chain-kg

./: .env.example  .gitignore  README.md  pyproject.toml  script_run_aquisition.py  script_run_extraction.py  script_verify_staging_entities.py
data/exports/: files.txt
data/ontology/: files.txt
data/raw/newsapi/: newsapi_raw.json
docs/: ner_extraction.md  subtask_breakdown.html  verification_entities_extraction.md
src/acquisition/: base.py  eu_sanctions.py  gdelt.py  newsapi.py  ofac.py
src/analysis/: files.txt
src/extraction/: entity_staging.py  ner_pipeline.py  sanctions_cleaner.py
src/resolution/: similarity.py
tests/: print_extracted_entities.py  verify_extracted_entities.py  verify_spacy_installation.py  verify_staging_entities.py
