[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supply-chain-kg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Acquisition
    "requests>=2.31",
    "httpx>=0.27",
    # Extraction
    "spacy>=3.7",
    "pandas>=2.2",
    "pyarrow>=15.0",
    # Resolution
    "rapidfuzz>=3.6",
    "sentence-transformers>=3.0",
    # Graph
    "neo4j>=5.18",
    "rdflib>=7.0",
    # API layer
    "fastapi>=0.111",
    "uvicorn>=0.29",
    # Streamlit
    "streamlit>=1.35",
    "streamlit-agraph>=0.0.45",
    "plotly>=5.22",
    # Utils
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]